@@ -123,7 +123,9 @@ backup_proj <- function(con){
 dbname <- dbGetInfo(con)$dbname
 backupname <- sprintf("%s_%s",dbname,format(Sys.time(), "%H%M%S%d%m%Y"))
 success <- file.copy(from=dbname, to=backupname , overwrite = FALSE)
-if (!success) {
+if (success) {
+gmessage("Succeeded!",con=TRUE,icon="info")
+} else{
 gmessage("Fail to back up the project.",con=TRUE,icon="error")
 }
 }
